added solution related db models added endpoints for - get solution by id, get all solutions, save solution, edit solution (not implemented)
